syntax = "proto3";

package hello;

option java_multiple_files = true;
option java_outer_classname = "Hello";
option java_package = "net.kazuy.proto.generated";

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
